# pyjutsu

./: envsetup.sh  pyproject.toml  readme.md  requirements.txt  setup.py  upload-package.sh
src/pyjutsu/: click_helper.py  collection_utils.py  errors.py  functional.py  geometry.py  image.py  json_serialization.py  loaders.py  log_utils.py  os_utils.py  pydantic_model.py
src/pyjutsu/dataset/: ocr.py
src/pyjutsu/dataset/iam_lists/: blacklist.py  whitelist.py
test/test_pyjutsu/: config.py  test_collections.py  test_geometry.py  test_ocr.py  test_pydantic_model.py
test/test_pyjutsu/resources/iam_ds/xml/: form_iam_0.xml  form_iam_1.xml
test/test_pyjutsu/resources/page_xml_ds/: form_page_xml_0.xml  form_page_xml_1.xml  form_page_xml_2.xml
