[project]
name = "pyjutsu"
version = "0.0.0"
description = "Top-level python utilities aimed to increase development efficiency."
authors = [
    {name = "Stepan Dyatkovskiy", email = "ml@dyatkovskiy.com"}
]
maintainers = [
    {name = "Stepan Dyatkovskiy", email = "ml@dyatkovskiy.com"}
]
urls = {Repository = "https://github.com/kaomoneus/pyjutsu"}
readme = "readme.md"
keywords = ["python", "boost", "utilities"]
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "PyYAML>=6.0",
]
classifiers = [
        "Intended Audience :: Science/Research",
        "Intended Audience :: Developers",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3 :: Only",
        "Topic :: Scientific/Engineering",
        "Topic :: Scientific/Engineering :: Mathematics",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
        "Topic :: Software Development",
        "Topic :: Software Development :: Libraries",
        "Topic :: Software Development :: Libraries :: Python Modules",
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests", "docs", "examples"]

[project.optional-dependencies]
#dev = ["pytest>=7.0.1", "isort>=5.8.0", "flake8>=4.0.1", "pytest-cov>=3.0.0", "importlib-metadata"]
#all = ["click>=8.0.4", "numba>=0.53.1", "tinydb>=4.7.0", "executor>=23.2", "scikit-optimize>=0.9.0"]


[tool.black]
line-length = 70
target-version = ['py36']
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.venv
  | dist
  | docs
)/
'''

[tool.isort]
profile = 'black'
src_paths = ['src', 'test']
line_length = 70
lines_after_imports = 2
force_single_line = 'True'
force_sort_within_sections = 'True'
order_by_type = 'False'

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "--color=yes"

[tool.pydocstyle]
inherit = false
ignore = 'D100,D104,D107,D202,D203,D212,D400,D401,D405,D406,D407,D415'
match = '.*\.py'